# go_go_gone_kata_learn_event_driven

./: README.md  docker-compose.yml  event_broker.py  events.py  main.py  pyproject.toml  run_demo_persistence.py  run_demo_replay.py  run_inmemory.py  run_redis.py  services.py
docs/: ARCHITECTURE_DIAGRAMS.md  Architecture.md  QUICK_START.md  README_REDIS.md  UV_GUIDE.md
src/: main.py  main_redis.py
src/brokers/: __init__.py  redis_event_broker.py
src/demos/: demo_persistence.py  example_replay.py
src/models/: __init__.py
src/services/: __init__.py  services.py  services_redis.py
