[project]
name = "go-go-gone-kata"
version = "0.1.0"
description = "Event-driven architecture kata with Redis Streams for persistence"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "redis>=5.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []

[tool.uv.sources]
